# RDTfeeddown

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yaml
docs/: API.md  DeveloperGuide.md  UserGuide.md  coding.rst  conf.py  correction.rst  genindex.html  gui.rst  index.rst  input.rst  installation.rst  requirements.txt  usage.rst  validation.rst
docs/_build/doctrees/: index.doctree
docs/_build/html/: .buildinfo  index.html  objects.inv  searchindex.js
docs/source/: conf.py
docs/source/_ext/: role.py
docs/source/_static/: custom.css
examples/: README.md  basic_analysis.py  batch_processing.py
rdtfeeddown/: __init__.py  analysis.py  cli.py  gui.py  plotting.py  utils.py
src/rdtfeeddown/: __init__.py  __main__.py  analysis.py  analysis_runner.py  cli.py  config.py  customtitlebar.py  data_handler.py  file_dialog_helpers  file_dialog_helpers.py  gui.py  plotting.py  resources.qrc  resources_rc.py  style.py  utils.py  validation_utils.py
src/rdtfeeddown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: .gitattributes  test_analysis.py
tests/test_data/: .gitattributes  b1_knobs.csv  b2_knobs.csv
tests/test_data/LHCB1_IP5V_0_L5/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB1_IP5V_150/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB1_IP5V_160_L5/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB1_IP5V_m150/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB1_refdata/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB2_IP5V_0_L5/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB2_IP5V_160_L5/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB2_IP5V_200/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB2_IP5V_m200/rdt/skew_sextupole/: f0030_y.tfs
tests/test_data/LHCB2_refdata/rdt/skew_sextupole/: f0030_y.tfs
tests/test_output/: LHCB1_rdtdata.json  LHCB1_response.json  LHCB2_rdtdata.json  LHCB2_response.json
